--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
-version: '3'
+version: '3.8'
 services:
   db:
     image: mysql:8.0
+    container_name: mysql-docker-car-dealership-project-db-1
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root_password
